[package]
name = "neocore"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
rumqttc = "0.19"
serialport = "4.8.1"
opencv = "0.73"
reqwest = { version = "0.11", features = ["blocking"] }
log = "0.4"
env_logger = "0.10"
glob = "0.3"
anyhow = "1.0"
hex = "0.4"
